Fault ticket CRUD for Machinary Operator complete
